Add/implement State mixin

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -69,8 +69,8 @@ a, %a
   font-weight: bold
   text-decoration: none
   transition: $b-transition
-  &:hover,
-  &:focus
+
+  +state
     color: $link--state-color
 
 // ----- Code ----- //
