--- a/source/assets/stylesheets/components/_thumb.sass
+++ b/source/assets/stylesheets/components/_thumb.sass
@@ -7,7 +7,7 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// %img.thumb[.thumb--m]{ src: '', alt: '' }
+// %img.thumb{ src: '', alt: '' }
 //
 // *************************************
 
@@ -18,10 +18,3 @@
 .thumb
   border-radius: 50%
   display: block
-
-// -------------------------------------
-//   Modifiers
-// -------------------------------------
-
-.thumb--m
-  border-radius: $thumb-borderRadius
