Add responsive Split modifer, and implement

--- a/source/assets/stylesheets/components/_split.sass
+++ b/source/assets/stylesheets/components/_split.sass
@@ -31,3 +31,13 @@
 
   &:last-child
     flex-shrink: 0
+
+// ----- Responsive ----- //
+
+.split--responsive
+  flex-wrap: wrap
+
+  +respond-to( $g-m, 'max-width' )
+
+    .split-cell
+      width: 100%
