--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,7 +1,7 @@
 %footer.row.row--b.tci
   .cell.well.well--l
 
-    .split
+    .split.split--responsive
       .split-cell.prm
         %p.mbf.tss Built using <a href='http://mvcss.io/' class='link link--bordered link--inverted'>MVCSS</a> and <a href='http://middlemanapp.com/' class='link link--bordered link--inverted'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='link link--bordered link--inverted'>GitHub</a>.
       .split-cell.tsl.wsn
