--- a/source/index.haml
+++ b/source/index.haml
@@ -34,7 +34,7 @@ description: "Front-end Developer at Code School"
       %h2.mbs Blog Posts
       %ul.list.list--divided
         - get_posts().drop(1).each do |post|
-          %li.list-item.split
+          %li.list-item.split.split--responsive
             .split-cell.prs
               = link_to post.data.title, post.url, class: 'h3 tfb'
             .split-cell
