Add mbn--n to Tools, fix footer repsonsive margin

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -63,6 +63,13 @@
 .mbxl
   margin-bottom: $b-space-xl
 
+// Responsive
+
++respond-to($g-m)
+
+  .mbn--m
+    margin-bottom: 0
+
 // ----- Horizontal ----- //
 
 .mhc
