--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -2,7 +2,7 @@
   .cell.well.well--l
 
     .split.split--responsive
-      .split-cell.prm
+      .split-cell.mbm.mbn--m.prm
         %p.mbf.tss Built using <a href='http://mvcss.io/' class='link link--bordered link--inverted'>MVCSS</a> and <a href='http://middlemanapp.com/' class='link link--bordered link--inverted'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='link link--bordered link--inverted'>GitHub</a>.
       .split-cell.tsl.wsn
         = link_to 'https://twitter.com/johndjameson', class: 'link link--borderless link--inverted' do
