Add font kerning, standardize font stack syntax

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -11,6 +11,7 @@ html
   font-family: $b-fontFamily
   font-size: $b-fontSize
   line-height: $b-lineHeight
+  font-feature-settings: 'kern'
   word-spacing: em(1px)
 
   +respond-to($g-m)
