--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -95,7 +95,7 @@ $b-transition: 0.2s ease-in-out
 // ----- Typography ----- //
 
 $b-fontFamily-heading: 'ff-tisa-web-pro', 'Georgia', serif
-$b-fontFamily-mono: menlo, monaco, "andale mono", courier, "lucida console", monospace
+$b-fontFamily-mono: 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontFamily: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontSize: 18px
 $b-fontSize-b: 22px
