--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -16,7 +16,7 @@
 
     %section.row
       .cell.cell--s.well.well--l
-        %article.post
+        %article.post.js-sidenotes
           = find_and_preserve do
             = yield
 
