Remove Button Component variables

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -120,28 +120,6 @@ $b-space-xl: $b-space * 4
 //   Components
 // -------------------------------------
 
-// ----- Button ----- //
-
-// Borders & Box Shadow
-
-$btn-borderRadius: 5px
-$btn--a-boxShadow-y: 4px
-$btn--a-boxShadow-y-offset: 2px
-$btn--a-boxShadow: 0 $btn--a-boxShadow-y 0 $majesty
-$btn--a-boxShadow-hover: 0 $btn--a-boxShadow-y 0 lighten( $majesty, 10% )
-$btn--a-boxShadow-active: 0 ( $btn--a-boxShadow-y - $btn--a-boxShadow-y-offset ) 0 lighten( $majesty, 10% )
-
-// Typography
-
-$btn-fontSize: 100%
-$btn--s-fontSize: 90%
-$btn--l-fontSize: 110%
-$btn-lineHeight: 2.5
-
-// Sizing
-
-$btn-space: $b-space
-
 // ----- Grid ----- //
 
 // Breakpoints
@@ -174,7 +152,7 @@ $list-space-s: $b-space * 0.5
 
 // ----- Pillar ----- //
 
-// Borders & Box Shadow
+// Borders
 
 $pillar-border: $b-border
 
