Update syntax highlighting container styles

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -74,7 +74,7 @@ $link--inverted--state-color: rgba( $link--inverted-color, 0.5 )
 
 // ----- Vendor ----- //
 
-$highlight-background: $c-background-invert
+$highlight-background: darken( $c-background, 5% )
 
 // -------------------------------------
 //   Base
@@ -167,11 +167,3 @@ $split-space: $b-space-s
 // ----- Thumb ----- //
 
 $thumb-borderRadius: 4px
-
-// -------------------------------------
-//   Vendor
-// -------------------------------------
-
-// ----- Highlight ----- //
-
-$highlight-border: 1px $b-borderStyle $c-border
