Drop FF Tisa in favor of single typeface

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -102,10 +102,8 @@
 // ----- Lead ----- //
 
 .post-lead
-  font-family: $b-fontFamily-heading
-  font-size: $b-fontSize-m
-  font-weight: normal
-  letter-spacing: 0.2em
+  font-weight: bold
+  letter-spacing: 0.1em
   text-transform: uppercase
 
 // ----- Sidenote ----- //
