--- a/source/index.haml
+++ b/source/index.haml
@@ -5,7 +5,7 @@ description: "Front-end Developer at Code School"
 
 %section.hero.hero--ampersand
   .hero-content
-    .hero-header
+    .hero-header.mbl
       = partial 'shared/header'
 
     .g.mtm
