Fix Split Component sections, add center modifier

--- a/source/assets/stylesheets/components/_split.sass
+++ b/source/assets/stylesheets/components/_split.sass
@@ -19,6 +19,25 @@
   display: flex
 
 // -------------------------------------
+//   Modifiers
+// -------------------------------------
+
+// ----- Center ----- //
+
+.split--center
+  align-items: center
+
+// ----- Responsive ----- //
+
+.split--responsive
+  flex-wrap: wrap
+
+  +respond-to( $g-m, 'max-width' )
+
+    .split-cell
+      width: 100%
+
+// -------------------------------------
 //   Scaffolding
 // -------------------------------------
 
@@ -31,13 +50,3 @@
 
   &:last-child
     flex-shrink: 0
-
-// ----- Responsive ----- //
-
-.split--responsive
-  flex-wrap: wrap
-
-  +respond-to( $g-m, 'max-width' )
-
-    .split-cell
-      width: 100%
