Integrate header styles, drop Hero-related classes

--- a/source/index.haml
+++ b/source/index.haml
@@ -3,11 +3,8 @@ title: Home
 description: "Front-end Developer at Code School"
 ---
 
-%section.hero.hero--ampersand
-  .hero-content
-    .hero-header.mbl
-      = partial 'shared/header'
-
+%section.row
+  .cell.well
     .g.mtm
       .g-b.g-b--m--1of2
         %h1.mbs Hey, there.
