Integrate Index hero unit styles

--- a/source/assets/stylesheets/components/_well.sass
+++ b/source/assets/stylesheets/components/_well.sass
@@ -25,3 +25,7 @@
 .well--l
   margin-bottom: $b-space-l
   margin-top: $b-space-l
+
+.well--xl
+  margin-bottom: $b-space-xl
+  margin-top: $b-space-xl
