--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -65,6 +65,11 @@ $pillar-borderColor: $c-border
 $row--a-background: $orchid
 $row--b-background: $majesty
 
+// Sector
+
+$sector-item--a-background: #2e2e2e
+$sector-item--b-background: #222222
+
 // ----- Structures ----- //
 
 $link-color: $c-highlight
@@ -130,7 +135,7 @@ $g-l: em( 1200px )
 
 // Settings
 
-$g-columns: 2
+$g-columns: 3
 $g-defaults: 's' $g-s, 'm' $g-m, 'l' $g-l
 $g-gutter: 20px
 $g-silent: false
