Update Label to use monospace typeface

--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -8,8 +8,9 @@
 .label
   color: $c-subdue
   font-size: $b-fontSize-s
+  font-family: $b-fontFamily-mono
   font-weight: bold
-  letter-spacing: em( 1px )
+  letter-spacing: em( 2px )
   text-transform: uppercase
 
 // -------------------------------------
