Lighten Base border color, increase weight

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -41,7 +41,7 @@ $orchid: #86609f
 
 $c-background-invert: $white
 $c-background: $alabaster
-$c-border: $quill
+$c-border: lighten( $quill, 5% )
 $c-highlight: $orchid
 $c-subdue: darken( $quill, 25% )
 $c-text-invert: $alabaster
@@ -89,7 +89,7 @@ $highlight-background: darken( $c-background, 5% )
 
 $b-borderRadius: 5px
 $b-borderStyle: solid
-$b-borderWidth: 2px
+$b-borderWidth: 4px
 $b-border: $b-borderWidth $b-borderStyle $c-border
 $b-boxShadow: 0 2px 0 rgba( $c-text, 0.25 )
 
