Update Palette and Sector color variables

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -23,9 +23,9 @@ $black: #000
 
 // Gray - dark to light
 
-$nero: #2c2c28
+$shark: #222
+$masala: #3c3b3d
 $quill: #e2e2e0
-$desertstorm: #f1f0ee
 
 // White
 
@@ -45,7 +45,7 @@ $c-border: lighten( $quill, 5% )
 $c-highlight: $orchid
 $c-subdue: darken( $quill, 25% )
 $c-text-invert: $alabaster
-$c-text: $nero
+$c-text: $masala
 
 // ----- Components ----- //
 
@@ -67,8 +67,8 @@ $row--b-background: $majesty
 
 // Sector
 
-$sector-item--a-background: #2e2e2e
-$sector-item--b-background: #222222
+$sector-item--a-background: lighten( $shark, 4% )
+$sector-item--b-background: $shark
 
 // ----- Structures ----- //
 
