Update color variables, add bc--shark Tool

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -18,6 +18,11 @@
 .bcs
   background: $c-subdue
 
+// ----- Palette ----- //
+
+.bc--shark
+  background: $shark
+
 // -------------------------------------
 //   Display
 // -------------------------------------
@@ -234,6 +239,8 @@
   color: $c-highlight
 .tci
   color: $c-text-invert
+.tcis
+  color: $c-text-invert-subdue
 .tcs
   color: $c-subdue
 .tct
