--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -6,7 +6,7 @@
 // *************************************
 
 .label
-  color: $c-subdue
+  color: $label-color
   font-size: $b-fontSize-s
   font-family: $b-fontFamily-mono
   font-weight: bold
@@ -20,4 +20,4 @@
 // ----- Invert ----- //
 
 .label--invert
-  color: $c-text-invert
+  color: $label--invert-color
