--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -45,6 +45,7 @@ $c-border: lighten( $quill, 5% )
 $c-highlight: $orchid
 $c-subdue: darken( $quill, 25% )
 $c-text-invert: $alabaster
+$c-text-invert-subdue: rgba( $c-text-invert, 0.7 )
 $c-text: $masala
 
 // ----- Components ----- //
@@ -71,6 +72,13 @@ $sector-item--a-background: lighten( $shark, 4% )
 $sector-item--b-background: $shark
 
 // ----- Structures ----- //
+
+// ----- Label ----- //
+
+$label-color: $c-subdue
+$label--invert-color: $c-text-invert-subdue
+
+// ----- Link ----- //
 
 $link-color: $c-highlight
 $link--state-color: darken( $link-color, 15% )
