Add Sector invert colors

--- a/source/assets/stylesheets/components/_sector.sass
+++ b/source/assets/stylesheets/components/_sector.sass
@@ -56,3 +56,9 @@
 
 .sector-item--b::before
   background: $sector-item--b-background
+
+.sector-item--a--invert::before
+  background: $sector-item--a--invert-background
+
+.sector-item--b--invert::before
+  background: $sector-item--b--invert-background
