--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -70,6 +70,8 @@ $row--b-background: $majesty
 
 $sector-item--a-background: lighten( $shark, 4% )
 $sector-item--b-background: $shark
+$sector-item--a--invert-background: $c-background
+$sector-item--b--invert-background: darken( $c-background, 4% )
 
 // ----- Structures ----- //
 
