--- a/source/index.haml
+++ b/source/index.haml
@@ -40,3 +40,5 @@ description: "Front-end Developer at Code School"
             = link_to post.data.title, post.url, class: 'h3 tfb'
           .split-cell
             %time.label= pretty_date(post.data.date)
+
+    = partial 'shared/footer'
