--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -24,6 +24,6 @@
                   = yield
 
             .g-b.g-b--1of3.sector-item.sector-item--b.sector-item--b--invert
-              .well.well--l.plm
+              .well.well--l
 
     = partial 'shared/footer'
