Improve minor typography

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -108,6 +108,7 @@
 .post-lead
   font-weight: bold
   letter-spacing: 0.1em
+  opacity: 0.95
   text-transform: uppercase
 
 // ----- Sidenote ----- //
