--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -45,7 +45,7 @@ h2, .h2,
 h3, .h3,
 h4, .h4
   font-family: $b-fontFamily-heading
-  font-weight: bold
+  font-weight: normal
   line-height: 1.2
   letter-spacing: em( 2px )
   margin-bottom: $b-space-xs
