--- a/source/index.haml
+++ b/source/index.haml
@@ -37,7 +37,7 @@ description: "Front-end Developer at Code School"
       - get_posts().drop(1).each do |post|
         %li.list-item.split.split--responsive
           .split-cell.prs
-            = link_to post.data.title, post.url, class: 'h3 tfb'
+            = link_to post.data.title, post.url, class: 'link h3 tfb'
           .split-cell
             %time.label= pretty_date(post.data.date)
 
