Add Button Component

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -52,10 +52,9 @@ $c-text: $masala
 
 // Button
 
-$btn--a-background: $orchid
-$btn--a-color: $alabaster
-$btn--b-background: lighten( $btn--a-background, 45% )
-$btn--b-color: #4e4e5b
+$btn-background: $c-highlight
+$btn-color: $c-text-invert
+$btn--state-background: darken( $btn-background, 10% )
 
 // Pillar
 
@@ -133,6 +132,22 @@ $b-space-xl: $b-space * 4
 // -------------------------------------
 //   Components
 // -------------------------------------
+
+// ----- Button ----- //
+
+// Borders
+
+$btn-borderRadius: 999px
+
+// Typography
+
+$btn-fontSize: $b-fontSize-s
+
+// Sizing
+
+$btn-space: 20px
+$btn-space-s: $btn-space * 0.5
+$btn-space-l: $btn-space * 2
 
 // ----- Grid ----- //
 
