--- a/source/index.haml
+++ b/source/index.haml
@@ -24,10 +24,10 @@ description: "Front-end Developer at Code School"
 
           %p.label Latest Post
 
-          = link_to post.data.title, post.url, class: 'link link--inverted h2 db tfb'
+          = link_to post.data.title, post.url, class: 'link link--inverted h2 db'
           %p= post.data.description
 
-          = link_to 'Read It', post.url, class: 'link link--inverted'
+          = link_to 'Read It', post.url, class: 'btn'
 
 %section.row
   .cell.well.well--l
@@ -37,7 +37,7 @@ description: "Front-end Developer at Code School"
       - get_posts().drop(1).each do |post|
         %li.list-item.split.split--responsive
           .split-cell.prs
-            = link_to post.data.title, post.url, class: 'link h3 tfb'
+            = link_to post.data.title, post.url, class: 'link'
           .split-cell
             %time.label= pretty_date(post.data.date)
 
