Integrate index responsive styles

--- a/source/assets/stylesheets/components/_well.sass
+++ b/source/assets/stylesheets/components/_well.sass
@@ -29,3 +29,11 @@
 .well--xl
   margin-bottom: $b-space-xl
   margin-top: $b-space-xl
+
+// Responive
+
++respond-to( $g-m )
+
+  .well--m--xl
+    margin-bottom: $b-space-xl
+    margin-top: $b-space-xl
