--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -167,6 +167,13 @@
 .pll
   padding-left: $b-space-l
 
+// Responsive
+
++respond-to( $g-m )
+
+  .plm--m
+    padding-left: $b-space
+
 // ----- Right ----- //
 
 .prf
