Add small Cell Component modifier

--- a/source/assets/stylesheets/components/_cell.sass
+++ b/source/assets/stylesheets/components/_cell.sass
@@ -7,7 +7,7 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// .cell
+// .cell[.cell--s]
 //   / ...
 //
 // *************************************
@@ -17,3 +17,12 @@
   margin-right: auto
   max-width: $b-maxWidth
   position: relative
+
+// -------------------------------------
+//   Modifiers
+// -------------------------------------
+
+// Sizes
+
+.cell--s
+  max-width: $b-maxWidth-s
