--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -122,7 +122,8 @@ $b-lineHeight: 1.5
 
 // ----- Sizing ----- //
 
-$b-maxWidth: em( 1060px, $b-fontSize-b )
+$b-maxWidth: 1060px
+$b-maxWidth-s: 700px
 $b-space: em( 20px )
 $b-space-xs: $b-space * 0.25
 $b-space-s: $b-space * 0.5
