Integrate article responsive styles

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -36,6 +36,13 @@
 .dn
   display: none
 
+// ----- Responsive ----- //
+
++respond-to( $g-l )
+
+  .db--l
+    display: block
+
 // -------------------------------------
 //   Margins
 // -------------------------------------
@@ -186,6 +193,13 @@
   padding-right: $b-space
 .prl
   padding-right: $b-space-l
+
+// Responsive
+
++respond-to( $g-l )
+
+  .prs--l
+    padding-right: $b-space-s
 
 // ----- Top ----- //
 
