Drop background-invert in favor of background-dark

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -39,8 +39,8 @@ $orchid: #86609f
 
 // ----- Base ----- //
 
-$c-background-invert: $white
 $c-background: $alabaster
+$c-background-dark: darken( $c-background, 5% )
 $c-border: lighten( $quill, 5% )
 $c-highlight: $orchid
 $c-subdue: darken( $quill, 25% )
