--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -11,10 +11,10 @@
 
 .bcb
   background: $c-background
+.bcbd
+  background: $c-background-dark
 .bch
   background: $c-highlight
-.bci
-  background: $c-background-invert
 .bcs
   background: $c-subdue
 
