--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -30,7 +30,7 @@
       margin-bottom: 0
 
   code, kbd
-    background: $c-background-invert
+    background: $c-background-dark
     display: inline-block
     font-size: $b-fontSize-m
     padding-left: $b-space-xs
