Update Base transition to use Quntic ease-out
Via
  - https://developers.google.com/web/fundamentals/look-and-feel/animations/choosing-the-right-easing
  - http://easings.net/#easeOutQuint

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -104,7 +104,7 @@ $b-boxShadow: 0 2px 0 rgba( $c-text, 0.25 )
 
 // ----- Transitions ----- //
 
-$b-transition: 0.2s ease-in-out
+$b-transition: 0.6s cubic-bezier( 0.23, 1, 0.32, 1 )
 
 // ----- Typography ----- //
 
