--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -68,19 +68,19 @@ $sector-item--b--invert-background: darken( $c-background, 5% )
 
 // ----- Structures ----- //
 
-// ----- Label ----- //
+// Label
 
 $label-color: $c-subdue
 $label--invert-color: $c-text-invert-subdue
 
-// ----- Link ----- //
+// Link
 
 $link-color: $c-highlight
 $link--state-color: darken( $link-color, 15% )
 $link--inverted-color: $c-text-invert
 $link--inverted--state-color: rgba( $link--inverted-color, 0.5 )
 
-// ----- Vendor ----- //
+// Highlight
 
 $highlight-background: darken( $c-background, 5% )
 
