--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,5 +1,5 @@
 = javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
-= javascript_include_tag 'application', async: true
+= javascript_include_tag 'application'
 
 :javascript
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
