--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -80,9 +80,9 @@ $link--state-color: darken( $link-color, 15% )
 $link--inverted-color: $c-text-invert
 $link--inverted--state-color: rgba( $link--inverted-color, 0.5 )
 
-// Highlight
+// Syntax
 
-$highlight-background: darken( $c-background, 5% )
+$syntax-background: darken( $c-background, 5% )
 
 // -------------------------------------
 //   Base
