--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -6,6 +6,14 @@
 // *************************************
 
 // -------------------------------------
+//   @font-face
+// -------------------------------------
+
+// ----- Source Sans/Code Pro ----- //
+
+@import url( 'http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Source+Code+Pro:400,600' )
+
+// -------------------------------------
 //   Colors
 // -------------------------------------
 
@@ -102,9 +110,9 @@ $b-transition: 0.6s cubic-bezier( 0.23, 1, 0.32, 1 )
 
 // ----- Typography ----- //
 
-$b-fontFamily: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$b-fontFamily: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontFamily-heading: $b-fontFamily
-$b-fontFamily-mono: 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
+$b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
 $b-fontSize-b: 20px
 $b-fontSize-xs: 60%
