--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -11,7 +11,7 @@
 
 // ----- Source Sans/Code Pro ----- //
 
-@import url( 'http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Source+Code+Pro:400,600' )
+@import url( 'http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic,600italic|Source+Code+Pro:400,600' )
 
 // -------------------------------------
 //   Colors
