--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -140,7 +140,7 @@ $b-space-xl: $b-space * 4
 
 // Borders
 
-$btn-borderRadius: 999px
+$btn-borderRadius: 0
 
 // Typography
 
@@ -148,9 +148,13 @@ $btn-fontSize: $b-fontSize-s
 
 // Sizing
 
+$btn-height: 50px
 $btn-space: 20px
 $btn-space-s: $btn-space * 0.5
-$btn-space-l: $btn-space * 2
+
+// Psuedo Element
+
+$btn-pseudo-width: 40px
 
 // ----- Grid ----- //
 
