Update images to reflect new vertical alignment

--- a/source/index.haml
+++ b/source/index.haml
@@ -10,7 +10,7 @@ description: "Front-end Developer at Code School"
         .well.well--l.well--m--xl
 
           .tac
-            = image_tag 'avatar.jpg', class: 'thumb dib', width: 140, height: 140
+            = image_tag 'avatar.jpg', class: 'thumb dib mbs', width: 140, height: 140
             %p.label.label--invert.mbf John D. Jameson
             %p
               Front-end Devloper at
