--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -4,7 +4,7 @@
     .split.split--center
       .split-cell
         = link_to '/index.html' do
-          = image_tag 'johndjameson-logo.svg', height: 60, width: 60, class: 'bcb db'
+          = image_tag 'johndjameson-logo.svg', height: 60, width: 60, class: 'bcb'
       .split-cell
         %p.mbf.tci.tss
           Built with
