--- a/source/index.haml
+++ b/source/index.haml
@@ -32,11 +32,12 @@ description: "Front-end Developer at Code School"
 %section.row
   .cell.well.well--l
 
-    %h2.label.mbm Archive
+    %h2.label.mbl Blog
+
     %ul.list.list--divided
-      - get_posts().drop(1).each do |post|
+      - get_posts().drop( 1 ).each do | post |
         %li.list-item.split.split--responsive
           .split-cell.prs
             = link_to post.data.title, post.url, class: 'link'
           .split-cell
-            %time.label= pretty_date(post.data.date)
+            %time.label= pretty_date( post.data.date )
