Switch to single quotes in index description

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,6 +1,6 @@
 ---
 title: Home
-description: "Front-end Developer at Code School"
+description: 'Front-end Developer at Code School'
 ---
 
 %section.row.has-sector
