Reduce post h2 top margin size

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -12,7 +12,7 @@
 
   h2
     margin-bottom: $b-space-s
-    margin-top: $b-space-l
+    margin-top: $b-space
 
   h3
     margin-bottom: $b-space-s
