Add fixOrphanWords class to post description

--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -10,7 +10,7 @@
         .tci
           %time.label.label--invert.dib.mbm= pretty_date( current_page.data.date )
           %h1.js-orphan= current_page.data.title
-          %p.mbf.tcis.tsl.tsi= current_page.data.description
+          %p.mbf.tcis.tsi.tsl.js-orphan= current_page.data.description
 
     %section.row.has-sector
       .cell
