--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -167,7 +167,7 @@ $g-l: em( 1200px )
 // Settings
 
 $g-columns: 3
-$g-defaults: 's' $g-s, 'm' $g-m, 'l' $g-l
+$g-breakpoints: ( s: $g-s, m: $g-m, l: $g-l )
 $g-gutter: 20px
 $g-silent: false
 
